get followers, get followings, search for users, and edit your profile

--- a/app/src/main/res/layout/mention_item_layout.xml
+++ b/app/src/main/res/layout/mention_item_layout.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <include layout="@layout/tweet_item_layout"
-        android:id="@+id/mentioned_item"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:id="@+id/mentioned_item" />
+
     <include layout="@layout/tweet_item_layout"
         android:id="@+id/mention_item" />
 
