--- a/app/src/main/res/layout/activity_default.xml
+++ b/app/src/main/res/layout/activity_default.xml
@@ -5,8 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".DefaultActivity"
-    android:clipToPadding="false"
-    >
+    android:clipToPadding="false">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/home_page_header"
@@ -72,6 +71,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:icon="@drawable/home" />
+
+        <com.google.android.material.tabs.TabItem
+            android:id="@+id/search_item"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:icon="@drawable/search_icon" />
 
         <com.google.android.material.tabs.TabItem
             android:id="@+id/profile_item"
