--- a/app/src/main/res/layout/fragment_user_profile.xml
+++ b/app/src/main/res/layout/fragment_user_profile.xml
@@ -14,17 +14,17 @@
         android:elevation="@dimen/margin_m">
 
         <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/header_picture"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/header_picture_height"
+            android:id="@+id/header_picture_choice"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             android:paddingBottom="@dimen/margin_m"
+            android:src="@drawable/header_placeholder"
+            style="@style/header_picture_style"
             />
 
         <include layout="@layout/horizontal_line_break"
-            app:layout_constraintTop_toBottomOf="@id/header_picture"
+            app:layout_constraintTop_toBottomOf="@id/header_picture_choice"
             android:layout_width="match_parent"
             android:layout_height="1dp"/>
 
@@ -34,7 +34,7 @@
             android:layout_height="@dimen/button_icon_height"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/header_picture"
+            app:layout_constraintTop_toBottomOf="@id/header_picture_choice"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintVertical_bias="0.25"
             app:layout_constraintHorizontal_bias="0.95"
@@ -51,7 +51,7 @@
             android:layout_height="@dimen/button_icon_height"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/header_picture"
+            app:layout_constraintTop_toBottomOf="@id/header_picture_choice"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintVertical_bias="0.05"
             app:layout_constraintHorizontal_bias="0.95"
@@ -68,7 +68,7 @@
             android:layout_height="@dimen/button_icon_height"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/header_picture"
+            app:layout_constraintTop_toBottomOf="@id/header_picture_choice"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintVertical_bias="0.05"
             app:layout_constraintHorizontal_bias="0.95"
@@ -83,17 +83,15 @@
 
 
         <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/profile_picture"
-            android:layout_width="@dimen/max_profile_picture_height"
-            android:layout_height="@dimen/max_profile_picture_width"
+            android:id="@+id/profile_picture_choice"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintHorizontal_bias="0.05"
             app:layout_constraintVertical_bias="0.50"
-            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
-            android:src="@drawable/profile_placeholder"/>
+            android:src="@drawable/profile_placeholder"
+            style="@style/profile_picture_style"/>
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/display_name"
@@ -104,7 +102,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.1"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/profile_picture"
+            app:layout_constraintTop_toBottomOf="@id/profile_picture_choice"
             tools:text="Elon Musk"/>
 
         <com.google.android.material.textview.MaterialTextView
