--- a/app/src/main/res/layout/quote_item_layout.xml
+++ b/app/src/main/res/layout/quote_item_layout.xml
@@ -1,23 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/quote_frame"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <include layout="@layout/tweet_item_layout"
-        android:id="@+id/quote"/>
+        android:id="@+id/quote_item"/>
 
     <RelativeLayout
+        android:id="@+id/quoted_tweet"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/margin_s"
-        android:layout_below="@id/quote"
+        android:layout_below="@id/quote_item"
         android:layout_marginStart="@dimen/margin_xxl"
         android:layout_marginEnd="@dimen/margin_s"
         android:background="@drawable/box">
 
         <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/profile_picture"
+            android:id="@+id/quoted_profile_picture"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
@@ -25,7 +28,7 @@
             android:maxWidth="@dimen/small_profile_picture_width"
             android:layout_marginStart="@dimen/margin_m"
             android:layout_marginTop="@dimen/margin_s"
-            android:src="@mipmap/ic_launcher"
+            android:src="@drawable/profile_placeholder"
             app:strokeWidth="@dimen/profile_picture_stroke"
             app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />
 
@@ -34,7 +37,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_marginStart="@dimen/margin_s"
-            android:layout_toEndOf="@id/profile_picture">
+            android:layout_toEndOf="@id/quoted_profile_picture">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -43,40 +46,41 @@
                 android:layout_marginTop="@dimen/margin_s">
 
                 <com.google.android.material.textview.MaterialTextView
-                    android:id="@+id/tweet_author_display_name"
+                    android:id="@+id/quoted_author_display_name"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginEnd="@dimen/margin_m"
                     android:fontFamily="@font/segoe_bold"
                     android:textSize="@dimen/quoted_tweet_textSizes"
-                    android:text="Elon Musk" />
+                    tools:text="Elon Musk" />
 
                 <com.google.android.material.textview.MaterialTextView
-                    android:id="@+id/tweet_author_username"
+                    android:id="@+id/quoted_author_username"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:fontFamily="@font/segoe"
                     android:textSize="@dimen/quoted_tweet_textSizes"
-                    android:text="\@Elon_Musk"
+                    tools:text="\@Elon_Musk"
                     android:textColor="@color/color_light_gray"/>
 
             </LinearLayout>
 
             <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/tweet_text"
+                android:id="@+id/quoted_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
                 android:maxLines="@integer/quote_max_lines"
                 android:layout_marginTop="@dimen/margin_s"
                 android:layout_marginEnd="@dimen/margin_l"
+                android:layout_marginBottom="@dimen/margin_s"
                 android:fontFamily="@font/segoe"
                 android:textSize="@dimen/quoted_tweet_textSizes"
                 android:text="@string/test_tweet_text"/>
 
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/tweet_attachments"
+                android:id="@+id/quoted_attachments"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingTop="@dimen/margin_m"
@@ -85,6 +89,9 @@
         </androidx.appcompat.widget.LinearLayoutCompat>
     </RelativeLayout>
 
-
+    <include layout="@layout/horizontal_line_break"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_below="@id/quoted_tweet"/>
 
 </RelativeLayout>
