--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -19,7 +19,6 @@
     <dimen name="biography_text_view_max_width">250dp</dimen>
     <dimen name="tab_height">54dp</dimen>
 
-
     <dimen name="profile_picture_height">48dp</dimen>
     <dimen name="profile_picture_width">48dp</dimen>
 
@@ -52,6 +51,13 @@
     <dimen name="view_title_size_medium">18sp</dimen>
     <dimen name="view_title_size_small">16sp</dimen>
 
+    <dimen name="text_size_xs">10sp</dimen>
+    <dimen name="text_size_s">12sp</dimen>
+    <dimen name="text_size_m">14sp</dimen>
+    <dimen name="text_size_l">16sp</dimen>
+    <dimen name="text_size_xl">18sp</dimen>
+
     <integer name="quote_max_lines">3</integer>
+
 
 </resources>
